--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "faunadb": "^4.1.1",
     "gh-pages": "^3.1.0",
     "next": "10.0.7",
     "react": "17.0.1",
